[FIX] documents: chatter has horizontal scroll on medium+ screen sizes
A horizontal scroll appears on medium to large screen sizes in the
documents' chatter sidebar.

This commit fixes it by correctly converting unapplied `right` css rules
to their equivalent `margin-right` values.

Also it gives a little more space to the chatter by raising its width
from 450px to 525px.

Task ID: 2193950

closes odoo/enterprise#9027

X-original-commit: be5ab9d34debcfaec849cf9c8be7b6587935dafb
Related: odoo/odoo#46958

--- a/documents/static/src/scss/documents_kanban_view_mobile.scss
+++ b/documents/static/src/scss/documents_kanban_view_mobile.scss
@@ -77,7 +77,7 @@
             }
 
             .o_chatter_topbar .o_topbar_right_area {
-                right: initial;
+                margin-right: initial;
             }
 
             .o_chatter {
